--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -51,9 +51,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css"
       rel="stylesheet"
     />
+
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body>
+  <body style="font-family: Roboto">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
